# chemistry-rs

./: .gitmodules  Cargo.toml
chem-equations/: Cargo.toml
chem-equations/src/: element.rs  lib.rs  molecule.rs  periodic_table.rs  reaction.rs
chem-wiki/: Cargo.toml
pubchem-rs/: Cargo.toml  README.md
pubchem-rs/src/: client.rs  compound.rs  errors.rs  fast_formula.rs  lib.rs
src/: element.rs  error.rs  lib.rs  periodic_table.rs  reaction.rs  tests.rs  token.rs
src/parser/: error.rs  mod.rs  molecule.rs  token.rs
