[package]
name = "chemistry-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lazy_static = "1.5.0"
fmtastic = "0.2.2"
fraction = "0.15.3"
num-integer = "0.1.46"
num-traits = "0.2.19"
num-bigint = "0.4.6"
num-rational = "0.4.2"