[package]
name = "chem-equations"
version = "0.1.0"
edition = "2024"
license = "MIT"
include = [
    "src/**/*",
    "Cargo.toml",
    "PeriodicTableJSON.json"
]
description = "Crate for parsing and balacing chemical equations"

[dependencies]
fraction = "0.15.3"
num-rational = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
lazy_static = "1.5.0"
thiserror = "2.0.18"
serde_json = "1.0.149"
fmtastic = "0.2.2"
num-integer = "0.1.46"
tokio = { version = "1.50.0", features = ["full"] }