[package]
name = "pubchem-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
fmtastic = "0.2.2"
reqwest = { version = "0.13.2" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

tokio = { version = "1.50.0", features = ["full"], optional = true }

[features]
default = ["async"]
async = ["dep:tokio"]
sync = ["reqwest/blocking"]