[package]
name = "pubchem-rs"
version = "0.1.0"
edition = "2024"
description = "Async REST API client for Pubchem"
license = "MIT"

[dependencies]
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-test = "0.2.6"

tokio = { version = "1.50.0", features = ["full"], optional = true }

[features]
default = ["async"]
async = ["dep:tokio"]
sync = ["reqwest/blocking"]